# Genisys-block-from-UTXO

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  README.md  main.cpp  main.h
.circleci/: config.yml
docs/: gtest.md
src/: Block.cpp  Block.h  Container.cpp  Container.h  main.cpp  main.h
src/transactions/: Transaction.cpp  Transaction.h  TransactionInput.cpp  TransactionInput.h  TransactionOutput.cpp  TransactionOutput.h
src/utils/: Utils.cpp  Utils.h  sha256.h
tests/: container.cpp  sha256.cpp  test.cpp  transaction.cpp  utils.cpp
tests/blocks/: README.md
utils/: Utils.h
